enoca_backend_challenge_soru5/src/main/java/com/example/enoca_backend_challenge_soru5/error/OrderDatabaseException.java
package com.example.enoca_backend_challenge_soru5.error;

public class OrderDatabaseException extends RuntimeException{
    public OrderDatabaseException() {
        super("Something gone wrong!!!");
    }
}
